[package]
name = "test-object-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
object_store = { version = "0.5.3", features = ["gcp"] }
tokio = { version = "1.24.2", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }

[patch.crates-io]
object_store = { git = "https://github.com/apache/arrow-rs.git", tag = "object_store_0.5.3" }
